third_party/move/move-compiler-v2/tests/checking-lang-v1/unused_inline_fun.move
module 0xc0ffee::m {
    inline fun another(f: ||u64): u64 {
        f()
    }

    public inline fun apply(f: ||u64): u64 {
        another(f)
    }
}
